--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
     </header>
 
-    <main id="content" role="main" tabindex="-1" class="util-nofocus">
+    <main id="content" role="main" class="util-nofocus">
 
       <div class="local-header-white-bg">
         <div class="local-header--question">
