--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <header role="banner">
       <div class="global-header">
         <div class="global-header--inner">
-          <a href="/" class="global-header--link" title="Go to the NHS.UK homepage">
+          <a href="index.html" class="global-header--link" title="Go to the NHS.UK homepage">
             <img src="images/logotype-nhs-mono.png" alt="">
           </a>
         </div>
