--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
       </div>
     </header>
 
-    <main id="content" role="main" class="util-nofocus">
-
+    <main role="main" class="util-nofocus">
+      <div id="content">
       <div class="local-header-white-bg">
         <div class="local-header--question">
           <h1 class="local-header--title--question">
@@ -137,7 +137,7 @@ Find a pharmacy
 
 
       </div>
-
+</div>
     </main>
 
     <footer role="contentinfo">
