--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
       </div>
     </header>
 
-    <main role="main" class="util-nofocus">
-      <div id="content">
+    <main id="content" role="main" class="util-nofocus">
       <div class="local-header-white-bg">
         <div class="local-header--question">
           <h1 class="local-header--title--question">
@@ -137,7 +136,6 @@ Find a pharmacy
 
 
       </div>
-</div>
     </main>
 
     <footer role="contentinfo">
